2020-03-03  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-utils.h (STREQ): Define.
	(STRNEQ): Likewise.
	* src/ios.c: Include pk-uttils.h.
	(STREQ): Remove.
	* src/pvm-val.c: Likewise.
	* src/pvm.jitter: Likewise.
	* src/pk-set.c: Likewise.
	* src/pk-hserver.c: Likewise.
	* src/pk-editor.c: Likewise.
	* src/pkl-typify.c: Likewise.
	* src/pkl-trans.c: Likewise.
	* src/pkl-fold.c: Likewise.
	* src/pkl-env.c: Likewise.
	* src/pkl-ast.c: Likewise.
	* src/pkl-anal.c: Likewise.
	* src/pk-misc.c: Likewise.
	* src/ios-dev-mem.c: Do not include assert.h.
	* src/ios-dev-nbd.c: Likewise.

2020-03-02  Eric Blake  <eblake@redhat.com>

	ios: Add Size to '.info ios'.
	* src/pk-ios.c (pk_cmd_info_ios, print_info_ios): Add Size
	column.
	* doc/poke.texi (info command): Document the addition.
	* testsuite/poke.cmd/file-mode.pk: Adjust expected output.
	* testsuite/poke.cmd/file-relative.pk: Likewise.

2020-03-02  Eric Blake  <eblake@redhat.com>

	* src/pk-ios.c (print_info_ios): Correct hyperlink.

2020-03-02  Eric Blake  <eblake@redhat.com>

	* .gitignore: Implementing '.doc' creates another file.

2020-03-02  Eric Blake  <eblake@redhat.com>

	nbd: Add testsuite coverage
	* HACKING (Using NBD connections in tests): New section.
	(Writing tests that depend on a certain capability): New capability.
	* testsuite/Makefile.am (check-DEJAGNU): Expose NBD witnesses.
	* configure.ac (AC_CHECK_PROGS): Check for nbdkit.
	* testsuite/lib/poke-dg.exp (dg-require): Add 'nbd' capability.
	(dg-tmpdir): New command to create safe short temp dir.
	(dg-nbd): New command to spawn nbdkit server.
	(poke_finish): Clean up nbdkit.
	* testsuite/poke.cmd/nbd-1.pk: New test of '.nbd'.
	* testsuite/poke.pkl/open-3.pk: New test of open("nbd...").
	* testsuite/poke.pkl/ios-nbd-1.pk: New test of nbd I/O.

2020-03-02  Eric Blake  <eblake@redhat.com>

	Add optional nbd:// io space support
	* configure.ac (PKG_CHECK_MODULES): Check for libnbd.
	* src/ios-dev-nbd.c: New file.